style.css
/* ... */
.alignPageInfo {
  display: flex;
  justify-content:space-evenly;
  margin-top:5px;
}

.recipeSelectionScreenVisible {
  visibility: visible;
}

.pageButtons {
  border-radius: 20 px;
  font-family: 'Futura';
}

h3 {
  color: #F8EFEA;
}

.miseOrientationButtons {
  color: #F8EFEA;
}

.pageCounter {
  align-self:center;
}

.recipeTitle {
  font-size: 20px;
  align-self:center;
  font-weight:bold;
  text-wrap: wrap;
}

.goAwayAbout {
  animation: smooth-disappear 2s ease;
  animation-fill-mode: forwards;
}

.instructionSettingsButton {
  border: none;
  /* flex:0.333; */
  margin-right: 15px;
  text-align:right;
}

.instructionSettingsBox {
  flex:1;
  text-align: right;
}

.instructions {
  top: 15%;
  max-height: 100%;
  width: 100%;
  visibility: hidden;
  overflow: visible;
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.instructionListManager {
  color:black;
  overflow:hidden;
  max-height: 55vh;
}

.instructionsText {
  color: white !important;
  max-height: 65vh;
  overflow: scroll;
  padding-left: 40px;
  padding-right: 40px;
}

.instructionManipulation {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
}

.instructionManipulationButton {
  border-radius: 5px;
  margin: 5px;
  padding: 15px;
  width: 100px;
}

.accentText {
  line-height: 1.5;
  color: #F8EFEA;
  font-size: x-large;
}

.instructionManipulationButton:disabled {
  background-color: rgb(210, 209, 209);
  color: black;
}

.boxContainer {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.box {
  margin-top: 25px;
  width: 50%;
  align-self:center;
  align-content:center;
}

.switch {
  position: relative;
  display: inline-block;
  text-align: center;
  align-items: center;
  align-self: center;
  width: 60px;
  height: 34px;
}

.switch input { 
  opacity: 0;
  width: 0;
  height: 0;
}
  
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #faf8e7;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: #192F01;
  -webkit-transition: .4s;
  transition: .4s;
}
  
input:checked + .slider {
  background-color: #DED369;
}

input:focus + .slider {
  box-shadow: 0 0 1px #c1012ead;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}
  
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.informationPanel {
  background-color:#E0475B;
  border: 5px solid #192F01;
  border-radius: 30px;
  width: 50%;
  display: flex;
  margin-left: 25%;
  margin-right: 25%;
  margin-top:15%;
  visibility: hidden;
  font-size: large;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  align-items: center;
  position:fixed;
  z-index: 1;
  padding-bottom: 3%;
  overflow: scroll;
  max-height:65vh;
}

.balanceLine {
  flex:1;
}

.recipePreviewTitle {
  margin-right:0.5;
  align-self: center;
  font-weight: bold;
  font-size: 20px;
  text-wrap: wrap;
}

.exitInfoPanel {
  width: 100%;
  display: flex;
  justify-content: right;
  align-self: flex-start;
  font-family: 'Futura';
  border: none;
  background-color:#E0475B;
  color: white;
  font-size: large;
  overflow:hidden;
  position:static;
  z-index: 5;
}

.imggg {
  width: 100%;
}

.instructionExits {
  display: flex;
  justify-content: center;
  padding-left: 15 px;
  align-items: flex-start;
  margin-left: 15px;
  flex-direction: column;
  flex:1;
}

.instructionExitsButtons {
  text-align: left;
}

.previousInstruction {
  animation: previousInstructionAnim 1s;
  animation-fill-mode: forwards;
  color: rgb(152, 152, 152);
}

.searchTerm {
  display:inline;
}

.currentInstruction {
  animation: currentInstructionAnim 1s;
  animation-fill-mode: forwards;
  color:#192F01;
}

.nextInstruction {
  animation: nextInstructionAnim 1s;
  animation-fill-mode: forwards;
  color:rgb(152, 152, 152);
}

.exitInstructionFront {
  animation: leaveInstructionAnim 1s;
  animation-fill-mode: forwards;
}


@keyframes currentInstructionAnim {
  from {
    font-size: 25px;
  }  
  to {
    font-size: 40px;
  }
}  

@keyframes currentInstructionAnimMobile {
  from {
    font-size:20px;
  }
  to {
    font-size: 30px;
  }
}


@keyframes nextInstructionAnim {
  from {
    font-size: 16px;
  }
  to {
    font-size: 25px;    }
}

@keyframes nextInstructionAnimMobile {
  from {
    font-size: 15px;
  }
  to {
    font-size: 20px;
  }
}

@keyframes previousInstructionAnim {
  from {
    font-size: 40px;
  }
  to {
    font-size: 25px;
  }
}

@keyframes previousInstructionAnimMobile {
  from {
    font-size: 30px;
  }
  to {
    font-size: 20px;
  }
}

@keyframes leaveInstructionAnim {
  from {
    font-size: 25px;
  }
  to {
    font-size: 16px;
  }
} 

@keyframes leaveInstructionAnimMobile {
  from {
    font-size: 20px;
  }
  to {
    font-size: 15px;
  }
}


@-o-keyframes opacity {
  0% {opacity:1;}
  100% {opacity:0;}
}

@-moz-keyframes opacity {
  0% {opacity:1;}
  100% {opacity:0;}
}

@keyframes opacity {
  0% {opacity:1;}
  100% {opacity:0;}

}

@keyframes opacityReverse {
  0% {opacity:0;}
  100% {opacity:1;}
}

@keyframes animate {
  0% {
    height: 0px;
  }

  30% {
    height: 53px;
  }

  60% {
    height: 107px;
  }
}
/* ... */

